Add contact form to team pages

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -33,7 +33,7 @@ layout: default
               <li class="list-group-item">
 		      <small style="text-align: center;">CONTACT THE TEAM LEADERS<br />CLICK BELOW</small>
               <br>
-              <a href="mailto:{{ email-owner }}" target="_blank">{{ page.team-email }}+owner
+              <a id="myBtn" href="mailto:{{ email-owner }}" target="_blank">{{ page.team-email }}+owner
                   <br><small>{{ email-domain }}</small></a>
               </li>
             {% else %}
@@ -149,6 +149,51 @@ layout: default
 
 
   </div><!-- END CONTAINER -->
+
+  <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <form name="input" method="POST" action="https://formspree.io/{{ email-owner }}">
+      <p>Name:<br /><input type="text" name="Name" placeholder="Your Name" required style="width: 80%"></p>
+      <p>Email:<br /><input type="email" name="_replyto" placeholder="Your email" required width="150px"></p>
+      <p>Subject:<br /><input type="text" name="_subject" value="I'm interested in your group"></p>
+      <p>Message:<br /><textarea name="message" placeholder="Type your message here" required></textarea></p>
+      <input type="submit" value="Send">
+    </form>
+  </div>
+  <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    
+    // When the user clicks the button, open the modal
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+    
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+  
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
+
+
+</div>
 
   <div class="clearfix spacer"></div>
   <div class="clearfix spacer"></div>
