Reworked formatting for contact modal

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -157,8 +157,8 @@ layout: default
   <div class="modal-content">
     <span class="close">&times;</span>
     <form name="input" method="POST" action="https://formspree.io/{{ email-owner }}">
-      <p>Name:<br /><input type="text" name="Name" placeholder="Your Name" required style="width: 80%"></p>
-      <p>Email:<br /><input type="email" name="_replyto" placeholder="Your email" required width="150px"></p>
+      <p>Name:<br /><input type="text" name="Name" placeholder="Your Name" required></p>
+      <p>Email:<br /><input type="email" name="_replyto" placeholder="Your email" required></p>
       <p>Subject:<br /><input type="text" name="_subject" value="I'm interested in your group"></p>
       <p>Message:<br /><textarea name="message" placeholder="Type your message here" required></textarea></p>
       <input type="submit" value="Send">
