Reworked formatting for contact modal

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -598,11 +598,11 @@ td {
   width: 80%;
 }
 
-input.modal-content {
+.modal-content input {
   width: 80%;
 }
 
-textarea.modal-content {
+.modal-content textarea {
   width: 80%;
   height: 150px;
 }
