Reworked formatting for contact modal

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -33,7 +33,7 @@ layout: default
               <li class="list-group-item">
 		      <small style="text-align: center;">CONTACT THE TEAM LEADERS<br />CLICK BELOW</small>
               <br>
-              <a id="myBtn" href="mailto:{{ email-owner }}" target="_blank">{{ page.team-email }}+owner
+              <a id="myBtn" href="#">{{ page.team-email }}+owner
                   <br><small>{{ email-domain }}</small></a>
               </li>
             {% else %}
