--- a/_includes/event-post-header.html
+++ b/_includes/event-post-header.html
@@ -33,7 +33,7 @@
         <div class="col-10 {% if post.main-image %}col-sm-6 col-lg-8{% else %}col-sm-9 col-lg-10{% endif %}">
           <h3 class="mt-0 mb-1">
         {% endif %}
-	<a class="post-link {% if post.tags contains 'partner' %}text-partner{% endif %}"  href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+	<a class="post-link {% if post.tags contains 'other' %}text-partner{% endif %}"  href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           {% if short-post %}
           </h5>
           {% else %}
