--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -151,9 +151,9 @@
             <span class="icon-disc d-flex mr-4 mb-2"><i class="material-icons bg-dark text-white">place</i></span>
           </div>
           <div class="col-sm-9">
-            <h5 class="mt-2">Start A Local Chapter</h5>
-            <p class="mb-2">You can start a local Indivisible chapter and get a website just like this.</p>
-            <a href="https://www.indivisibleguide.com/groups-nav" class="btn btn-link btn-flush text-white"><u>Browse chapters</u></a> <a href="https://www.indivisibleguide.com/group-toolkit" class="btn btn-link text-white"><u>Group leader toolkit</u></a> <a href="http://indivisibletemplate.com" class="btn btn-link btn-flush text-white"><u>Get a free website</u></a>
+            <h5 class="mt-2">Get an Indivisible Website</h5>
+            <p class="mb-2">You can get a website just like we did.</p>
+            <a href="http://indivisibletemplate.com" class="btn btn-link btn-flush text-white"><u>Get a free website</u></a>
           </div>
         </div>
       </div>
