--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
           {% for my_page in sorted_pages %}
            {% if my_page.nav %}
             <li class="nav-item {% if my_page.navbutton %}join-btn ml-auto{% endif %}" {% if my_page.navbutton %}style="order: 3;"{% endif %}>
-              <a class="nav-link {% if my_page.navbutton %}btn btn-danger text-white {% endif %}" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+		    <a class="nav-link {% if my_page.navbutton %}btn btn-danger text-white {% endif %}" href={% if my_page.basiclink %}"{{ my_page.exturl }}" target="_blank"{% else %}"{{ my_page.url | relative_url }}"{% endif %}>{{ my_page.title | escape }}</a>
             </li>
            {% endif %}
           {% endfor %}
